# ai-research-copilot

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  body-ethics.json  body-finance.json  body-healthcare.json  pyproject.toml  requirements.txt
backend/app/: __init__.py  chunking.py  db.py  deps.py  main.py  models.py  rag.py
backend/app/routers/: chat.py  ingest.py
frontend/: index.html
scripts/: init_pgvector.sql
