[project]
name = "ai-research-copilot-backend"
version = "0.1.0"
description = "Open-source doc-chat RAG backend (FastAPI + pgvector + Ollama/OpenAI)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "SQLAlchemy>=2.0.30",
  "psycopg[binary]>=3.1.19",
  "pgvector>=0.2.5",
  "sentence-transformers>=3.0.0",
  "nltk>=3.9",
  "pypdf>=4.2.0",
  "httpx>=0.27.0",

  # ✅ Added for production (OpenAI + text cleanup)
  "openai>=1.43.0",
  "ftfy>=6.2.0",
  "Unidecode>=1.3.8"
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "pytest"
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8080
